# NetworkInference

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CHANGELOG.md  references.ris  roadmap.md
notebooks/: demo.ipynb  ggl_errors_by_sample_size.csv  mle.ipynb  mle_errors_by_sample_size.csv  results_invcov.csv  results_rMLE.csv  visuals.ipynb
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb
src/gso.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gso/core/: __init__.py  types.py
src/gso/graph_sampling/: __init__.py  sampler.py  samplerv2.py
src/gso/gso_learning/: __init__.py  mle_learning.py  mle_learning_bis.py  visualize_attrnet.py
src/gso/manifolds/: __init__.py  algebraic.py  base.py  visualize.py
src/gso/signal_generation/: __init__.py  generator.py
src/tests/: test_manifold.py
