[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gso*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "--import-mode=importlib"

[project]
name = "gso"
version = "0.1.0"
description = "Learning Graph Shift Operators"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Esteban Nocet-Binois", email = "en4624@princeton.edu"}
]
dependencies = [
    "numpy>=2.2",
    "scipy>=1.15",
    "sympy>=1.13",
    "matplotlib>=3.10",
    "plotly>=6.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.ruff]
line-length = 90
include = ["src/**/*.py", "src/**/*.pyi", "src/**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["B", "I", "RUF", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
allow_untyped_decorators = true
pretty = true
files = ["src/"]
exclude = [
    "^build/",
    "^src/tests/",
]
